--- a/index.html
+++ b/index.html
@@ -348,6 +348,16 @@
                     </div>
                 </a>
             </div>
+            <div class="col tool-item" data-category="devops">
+                <a href="springboot-microservice-guide.html" class="card h-100 text-decoration-none tool-card">
+                    <span class="category-badge badge-devops">DevOps</span>
+                    <div class="card-body text-center p-4">
+                        <i class="bi bi-boxes display-4"></i>
+                        <h5 class="card-title mt-3">Spring Boot Microservice Guide</h5>
+                        <p class="card-text small text-muted">Best practices for Java microservices.</p>
+                    </div>
+                </a>
+            </div>
 
             <!-- LOGS TOOLS -->
             <div class="col tool-item" data-category="logs">
