feat: add Istio Virtual Service direct response generator tool.

--- a/tools/devops/istio-vs-generator.html
+++ b/tools/devops/istio-vs-generator.html
@@ -236,8 +236,10 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <div class="d-flex justify-content-between align-items-center mb-1">
-                                    <label for="responseBody" class="form-label mb-0">Response Body</label>
+                                <div class="d-flex justify-content-between align-items-center mb-2">
+                                    <label for="responseBody" class="form-label mb-0 fw-semibold">
+                                        <i class="bi bi-code-square me-1"></i> Response Body
+                                    </label>
                                     <div class="btn-group btn-group-sm">
                                         <button type="button" class="btn btn-outline-secondary" onclick="formatBody()"
                                             title="Beautify JSON (Ctrl+Shift+F)">
@@ -247,12 +249,25 @@
                                             title="Minify JSON">
                                             <i class="bi bi-arrows-collapse"></i> Minify
                                         </button>
+                                        <button type="button" class="btn btn-outline-secondary" onclick="clearBody()"
+                                            title="Clear content">
+                                            <i class="bi bi-eraser"></i> Clear
+                                        </button>
                                     </div>
                                 </div>
-                                <textarea class="form-control font-monospace" id="responseBody" rows="12"
-                                    placeholder='{"status": "success", "data": {...}}' required
-                                    style="font-size: 0.9em; line-height: 1.4;"></textarea>
-                                <div id="jsonStatus" class="form-text"></div>
+                                <textarea class="form-control font-monospace" id="responseBody" rows="22" placeholder='{
+  "status": "success",
+  "message": "Mock response",
+  "data": {
+    "id": 123,
+    "name": "Example",
+    "items": []
+  }
+}' required style="font-size: 0.95em; line-height: 1.5; resize: vertical; min-height: 400px;"></textarea>
+                                <div class="d-flex justify-content-between align-items-center mt-1">
+                                    <div id="jsonStatus" class="form-text"></div>
+                                    <small class="text-secondary" id="charCount">0 characters</small>
+                                </div>
                             </div>
                             <button type="submit" class="btn btn-success btn-lg w-100">
                                 <i class="bi bi-plus-lg"></i> Add Mock
@@ -383,10 +398,32 @@ spec:
                 const parsed = JSON.parse(textarea.value);
                 textarea.value = JSON.stringify(parsed);
                 showStatus('success', '<i class="bi bi-check-circle"></i> Minified successfully');
+                updateCharCount();
             } catch (e) {
                 showStatus('danger', '<i class="bi bi-x-circle"></i> Invalid JSON: ' + e.message);
             }
         }
+
+        // Clear response body
+        function clearBody() {
+            const textarea = document.getElementById('responseBody');
+            if (textarea.value && !confirm('Clear the response body?')) return;
+            textarea.value = '';
+            textarea.classList.remove('is-valid', 'is-invalid');
+            document.getElementById('jsonStatus').innerHTML = '';
+            updateCharCount();
+            textarea.focus();
+        }
+
+        // Update character count
+        function updateCharCount() {
+            const textarea = document.getElementById('responseBody');
+            const count = textarea.value.length;
+            document.getElementById('charCount').textContent = count.toLocaleString() + ' characters';
+        }
+
+        // Make clearBody globally available
+        window.clearBody = clearBody;
 
         // Show status message
         function showStatus(type, message) {
@@ -395,14 +432,25 @@ spec:
             setTimeout(() => { status.innerHTML = ''; }, 3000);
         }
 
-        // Real-time JSON validation on input
+        // Real-time JSON validation on input (only for JSON content type)
         document.getElementById('responseBody').addEventListener('input', function () {
             const value = this.value.trim();
             const status = document.getElementById('jsonStatus');
+            const contentType = document.getElementById('contentType').value;
+
+            // Update character count
+            updateCharCount();
 
             if (!value) {
                 status.innerHTML = '';
                 this.classList.remove('is-valid', 'is-invalid');
+                return;
+            }
+
+            // Only validate JSON when content type is application/json
+            if (contentType !== 'application/json') {
+                this.classList.remove('is-valid', 'is-invalid');
+                status.innerHTML = '';
                 return;
             }
 
@@ -416,6 +464,11 @@ spec:
                 this.classList.add('is-invalid');
                 status.innerHTML = '<span class="text-danger"><i class="bi bi-x-circle"></i> ' + e.message + '</span>';
             }
+        });
+
+        // Re-validate when content type changes
+        document.getElementById('contentType').addEventListener('change', function () {
+            document.getElementById('responseBody').dispatchEvent(new Event('input'));
         });
 
         // Prefix toggle and preview handling
