feat: Add numerous new web tools, games, apps, templates, guides, and legacy pages, along with a new favicon and an update to index.html.

--- a/tools/encoders/aes-256-gcm.html
+++ b/tools/encoders/aes-256-gcm.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../../assets/css/global.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JWE Encryption/Decryption</title>
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/favicon.svg">
     <script src="https://cdn.jsdelivr.net/npm/jose@3.14.0/dist/browser/jose.min.js"></script>
     <style>
         body {
