--- a/tools/encoders/base64-tool.html
+++ b/tools/encoders/base64-tool.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Encode and decode Base64 strings with file support">
     <title>Base64 Encoder/Decoder | Dev Tools</title>
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/favicon.svg">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../../assets/css/shared-styles.css">
