--- a/tools/generators/diff-viewer.html
+++ b/tools/generators/diff-viewer.html
@@ -7,6 +7,7 @@
     <meta name="description"
         content="Compare two text blocks side-by-side with line-by-line and character-level diff highlighting">
     <title>Diff Viewer | Dev Tools</title>
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/favicon.svg">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../../assets/css/shared-styles.css">
