--- a/apps/watchface-privacy.html
+++ b/apps/watchface-privacy.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy – Black Cat Watch Face</title>
+    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon.svg">
   <style>
     /* ---------- minimalist styling ---------- */
     :root { color-scheme: light dark; }
