--- a/games/driving-simulator.html
+++ b/games/driving-simulator.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Road Rush - Driving Simulator</title>
+    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon.svg">
     <style>
         * {
             margin: 0;
