--- a/games/gta.html
+++ b/games/gta.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Browser City: Chaos V8 (Score + FPS Fix)</title>
+    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon.svg">
     <style>
         body { margin: 0; overflow: hidden; background-color: #000; font-family: 'Segoe UI', sans-serif; user-select: none; }
         
