--- a/guides/springboot-microservice-guide.html
+++ b/guides/springboot-microservice-guide.html
@@ -7,6 +7,7 @@
     <meta name="description"
         content="Comprehensive guide to Java Spring Boot Microservice best practices with code examples and architecture patterns.">
     <title>Spring Boot Microservice Best Practices</title>
+    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap"
