--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description"
         content="A collection of handy developer utility tools including JSON formatters, converters, calculators, and more.">
     <title>Utility Tools</title>
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/css/shared-styles.css">
