--- a/resume/resume-wirawan.html
+++ b/resume/resume-wirawan.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WIRAWAN NANTI - Test Specialist</title>
+    <link rel="icon" type="image/svg+xml" href="../assets/images/favicon.svg">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     
