--- a/tools/devops/set-comparator.html
+++ b/tools/devops/set-comparator.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Set Comparison Tool</title>
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/favicon.svg">
     <!-- We'll use Tailwind CSS for easy and clean styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
