--- a/tools/encoders/hash-generator.html
+++ b/tools/encoders/hash-generator.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Generate MD5, SHA-1, SHA-256, and SHA-512 hashes for text and files">
     <title>Hash Generator | Dev Tools</title>
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/favicon.svg">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../../assets/css/shared-styles.css">
