--- a/tools/formatters/yaml-json-converter.html
+++ b/tools/formatters/yaml-json-converter.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../../assets/css/global.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YAML ↔ JSON Converter</title>
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/favicon.svg">
     <!-- Tailwind CSS for styling -->
     <script>
         tailwind.config = { darkMode: 'class' }
