--- a/tools/generators/markdown-previewer.html
+++ b/tools/generators/markdown-previewer.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Live markdown editor with real-time preview and syntax highlighting">
     <title>Markdown Previewer | Dev Tools</title>
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/favicon.svg">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../../assets/css/shared-styles.css">
