--- a/tools/utilities/deeplink-wrapper.html
+++ b/tools/utilities/deeplink-wrapper.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deep Link Tester</title>
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/favicon.svg">
     <style>
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; padding: 20px; text-align: center; background-color: #f4f4f9; }
         .container { background: white; max-width: 500px; margin: 0 auto; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
