--- a/tools/utilities/stock-dr-convertion.html
+++ b/tools/utilities/stock-dr-convertion.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>เครื่องคำนวณราคา DR (DR Price Calculator)</title>
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/favicon.svg">
     <meta name="description" content="คำนวณราคา Depositary Receipts (DR) ที่ควรจะเป็น เปรียบเทียบกับราคาตลาด">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
