--- a/tools/utilities/timeout-simulator.html
+++ b/tools/utilities/timeout-simulator.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../../assets/css/global.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timeout Simulator</title>
+    <link rel="icon" type="image/svg+xml" href="../../assets/images/favicon.svg">
     <style>
         body {
             font-family: Arial, sans-serif;
