docs: Add new guides for coding design best practices, Spring Boot microservices, and an English learning tool.

--- a/guides/springboot-microservice-guide.html
+++ b/guides/springboot-microservice-guide.html
@@ -503,6 +503,8 @@
                 <a href="#observability" class="nav-link">Observability</a>
                 <a href="#testing" class="nav-link">Testing</a>
                 <a href="#deployment" class="nav-link">Deployment</a>
+                <a href="coding-design-best-practices.html" class="nav-link" style="color: #4facfe;"><i
+                        class="bi bi-box-arrow-up-right"></i> Coding Design</a>
             </div>
             <button class="theme-toggle" onclick="toggleTheme()">
                 <span class="icon-sun">☀️</span>
