--- a/tools/learning/english-lab.html
+++ b/tools/learning/english-lab.html
@@ -976,6 +976,64 @@
             margin-top: 0.5rem;
         }
 
+        /* Sentence Builder */
+        .builder-target {
+            min-height: 60px;
+            border: 2px dashed var(--color-border);
+            border-radius: 0.75rem;
+            padding: 1rem;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.5rem;
+            margin-bottom: 1.5rem;
+            background: var(--color-bg-tertiary);
+            align-content: flex-start;
+        }
+
+        .builder-source {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.5rem;
+            justify-content: center;
+        }
+
+        .builder-word {
+            padding: 0.5rem 1rem;
+            background: var(--color-bg-secondary);
+            border: 1px solid var(--color-border);
+            border-radius: 0.5rem;
+            cursor: pointer;
+            font-weight: 600;
+            font-size: 0.95rem;
+            box-shadow: var(--shadow-sm);
+            transition: all 0.2s;
+            user-select: none;
+        }
+
+        .builder-word:hover {
+            transform: translateY(-2px);
+            border-color: #667eea;
+            color: #667eea;
+        }
+
+        .builder-word.used {
+            opacity: 0;
+            pointer-events: none;
+            transform: scale(0.8);
+        }
+
+        .builder-word.in-target {
+            background: var(--el-gradient-3);
+            color: #fff;
+            border-color: transparent;
+        }
+
+        .builder-word.in-target:hover {
+            background: #ef4444;
+            color: #fff;
+            text-decoration: line-through;
+        }
+
         .answer-reveal {
             background: var(--color-bg-tertiary);
             border: 1px solid var(--color-border);
@@ -1311,6 +1369,7 @@
             <button class="mode-tab" data-mode="quiz"><i class="bi bi-patch-question"></i> Quiz</button>
             <button class="mode-tab" data-mode="spelling"><i class="bi bi-keyboard"></i> Spelling Bee</button>
             <button class="mode-tab" data-mode="wordmatch"><i class="bi bi-grid-3x2-gap"></i> Word Match</button>
+            <button class="mode-tab" data-mode="builder"><i class="bi bi-bricks"></i> Sentence Builder</button>
             <button class="mode-tab" data-mode="grammar"><i class="bi bi-mortarboard"></i> Grammar</button>
         </div>
 
@@ -1346,6 +1405,11 @@
                 <div class="flashcard-container" onclick="flipCard()">
                     <div class="flashcard" id="flashcard">
                         <div class="flashcard-face flashcard-front">
+                            <button class="fc-audio"
+                                onclick="event.stopPropagation(); speakWord(document.getElementById('fcWord').textContent)"
+                                title="Listen"
+                                style="position:absolute;top:1rem;right:1rem;background:none;border:none;color:#fff;font-size:1.5rem;cursor:pointer;opacity:0.8;transition:0.2s;"><i
+                                    class="bi bi-volume-up-fill"></i></button>
                             <div class="flashcard-word" id="fcWord">—</div>
                             <div class="flashcard-phonetic" id="fcPhonetic"></div>
                             <div class="flashcard-hint">Tap to reveal meaning</div>
@@ -1463,6 +1527,40 @@
                 <div class="match-score" id="matchResult"></div>
                 <div style="text-align:center;margin-top:1rem;">
                     <button class="game-btn primary" onclick="startWordMatch()">New Round 🔀</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- SENTENCE BUILDER -->
+        <div class="mode-content" id="mode-builder">
+            <div class="game-container">
+                <div class="game-score-bar">
+                    <span>🧩 Sentence Builder</span>
+                    <span id="builderScore">Score: 0</span>
+                    <span id="builderStreak">🔥 0</span>
+                </div>
+                <div class="game-card">
+                    <p style="color:var(--color-text-secondary);font-size:0.9rem;margin-bottom:1rem;">Construct the
+                        sentence correctly by selecting words in order.</p>
+                    <div id="builderTarget" class="builder-target"></div>
+                    <div id="builderSource" class="builder-source"></div>
+                    <div class="quiz-feedback" id="builderFeedback" style="justify-content:center;margin-top:1rem;">
+                    </div>
+                    <div style="display:flex;gap:0.75rem;justify-content:center;margin-top:1rem;">
+                        <button class="game-btn secondary" onclick="builderHint()" id="builderHintBtn">💡 Hint</button>
+                        <button class="game-btn primary" onclick="checkBuilder()" id="builderCheckBtn">Check ✓</button>
+                    </div>
+                    <div style="margin-top:1.25rem;">
+                        <button class="game-btn secondary" onclick="builderSkip()"
+                            style="font-size:0.8rem;padding:0.4rem 1rem;">Skip →</button>
+                    </div>
+                </div>
+                <div class="quiz-results" id="builderResults" style="display:none;padding:1.5rem 0;">
+                    <div class="result-icon">🧩</div>
+                    <div class="result-score" id="builderFinalScore">0/10</div>
+                    <div class="result-label">Sentences Built</div>
+                    <div class="result-xp" id="builderXp">+0 XP</div>
+                    <button class="quiz-restart-btn" onclick="startBuilder()">Play Again</button>
                 </div>
             </div>
         </div>
@@ -2267,6 +2365,142 @@
         }
 
         /* ============================================
+           SENTENCE BUILDER
+           ============================================ */
+        let builderDeck = [], builderIdx = 0, builderCorrect = 0, builderStreak = 0;
+        let builderCurrentWords = [], builderTargetWords = [], builderCurrentShuffle = [];
+        const BUILDER_LENGTH = 5;
+
+        function startBuilder() {
+            builderDeck = [...allWords].filter(w => w.example && w.example.split(' ').length > 3).sort(() => Math.random() - 0.5).slice(0, BUILDER_LENGTH);
+            builderIdx = 0; builderCorrect = 0; builderStreak = 0;
+            document.getElementById('builderResults').style.display = 'none';
+            document.getElementById('builderTarget').parentElement.style.display = 'block';
+            document.getElementById('builderCheckBtn').style.display = '';
+            document.getElementById('builderHintBtn').style.display = '';
+            renderBuilderQuestion();
+        }
+
+        function renderBuilderQuestion() {
+            if (builderIdx >= builderDeck.length) { showBuilderResults(); return; }
+            const w = builderDeck[builderIdx];
+            document.getElementById('builderScore').textContent = `Score: ${builderCorrect}`;
+            document.getElementById('builderStreak').textContent = `🔥 ${builderStreak}`;
+            document.getElementById('builderFeedback').className = 'quiz-feedback';
+
+            const cleanExample = w.example.replace(/[.,!?"]/g, '').trim();
+            const words = cleanExample.split(' ').filter(word => word.trim().length > 0);
+
+            builderCurrentWords = words.map((word, i) => ({ id: i, text: word }));
+            builderCurrentShuffle = [...builderCurrentWords].sort(() => Math.random() - 0.5);
+            builderTargetWords = [];
+
+            renderBuilderBoxes();
+        }
+
+        function renderBuilderBoxes() {
+            const target = document.getElementById('builderTarget');
+            const source = document.getElementById('builderSource');
+            target.innerHTML = '';
+            source.innerHTML = '';
+
+            builderTargetWords.forEach(w => {
+                const bw = document.createElement('div');
+                bw.className = 'builder-word in-target';
+                bw.textContent = w.text;
+                bw.onclick = () => {
+                    builderTargetWords = builderTargetWords.filter(tw => tw.id !== w.id);
+                    renderBuilderBoxes();
+                };
+                target.appendChild(bw);
+            });
+
+            builderCurrentShuffle.forEach(w => {
+                const isUsed = builderTargetWords.some(tw => tw.id === w.id);
+                const bw = document.createElement('div');
+                bw.className = `builder-word ${isUsed ? 'used' : ''}`;
+                bw.textContent = w.text;
+                bw.onclick = () => {
+                    if (!isUsed) {
+                        builderTargetWords.push(w);
+                        renderBuilderBoxes();
+                    }
+                };
+                source.appendChild(bw);
+            });
+        }
+
+        function builderHint() {
+            if (builderTargetWords.length < builderCurrentWords.length) {
+                // Find first incorrect index
+                let incorrectIdx = -1;
+                for (let i = 0; i < builderTargetWords.length; i++) {
+                    if (builderTargetWords[i].id !== builderCurrentWords[i].id) {
+                        incorrectIdx = i;
+                        break;
+                    }
+                }
+                if (incorrectIdx !== -1) {
+                    // Remove words from incorrect point onwards
+                    builderTargetWords = builderTargetWords.slice(0, incorrectIdx);
+                }
+
+                const nextExpected = builderCurrentWords[builderTargetWords.length];
+                builderTargetWords.push(nextExpected);
+                renderBuilderBoxes();
+            }
+        }
+
+        function checkBuilder() {
+            const w = builderDeck[builderIdx];
+            const typed = builderTargetWords.map(w => w.text).join(' ').toLowerCase();
+            const correctStr = builderCurrentWords.map(w => w.text).join(' ').toLowerCase();
+            const correct = typed === correctStr;
+            const fb = document.getElementById('builderFeedback');
+
+            if (builderTargetWords.length < builderCurrentWords.length) {
+                fb.className = 'quiz-feedback wrong show';
+                fb.innerHTML = `<i class="bi bi-info-circle"></i> Use all the words!`;
+                return;
+            }
+
+            if (correct) {
+                builderCorrect++;
+                builderStreak++;
+                fb.className = 'quiz-feedback correct show';
+                fb.innerHTML = `<i class="bi bi-check-circle"></i> Correct! "${w.example}"`;
+                addXP(15);
+                setTimeout(() => { builderIdx++; renderBuilderQuestion(); }, 1800);
+            } else {
+                builderStreak = 0;
+                fb.className = 'quiz-feedback wrong show';
+                fb.innerHTML = `<i class="bi bi-x-circle"></i> Hmm, that doesn't look quite right.`;
+                setTimeout(() => { fb.classList.remove('show'); }, 2000);
+                addXP(1);
+            }
+        }
+
+        function builderSkip() {
+            const w = builderDeck[builderIdx];
+            const fb = document.getElementById('builderFeedback');
+            fb.className = 'quiz-feedback wrong show';
+            fb.innerHTML = `Skipped — the sentence was: "${w.example}"`;
+            builderStreak = 0;
+            setTimeout(() => { builderIdx++; renderBuilderQuestion(); }, 2000);
+        }
+
+        function showBuilderResults() {
+            document.getElementById('builderTarget').parentElement.style.display = 'none';
+            document.getElementById('builderCheckBtn').style.display = 'none';
+            document.getElementById('builderHintBtn').style.display = 'none';
+            document.getElementById('builderFeedback').className = 'quiz-feedback';
+            const xp = builderCorrect * 15;
+            document.getElementById('builderFinalScore').textContent = `${builderCorrect}/${BUILDER_LENGTH}`;
+            document.getElementById('builderXp').textContent = `+${xp} XP earned!`;
+            document.getElementById('builderResults').style.display = 'block';
+        }
+
+        /* ============================================
            THEME
            ============================================ */
         function toggleTheme() {
@@ -2295,6 +2529,7 @@
                     if (tab.dataset.mode === 'quiz') startQuiz();
                     if (tab.dataset.mode === 'spelling') startSpellingBee();
                     if (tab.dataset.mode === 'wordmatch') startWordMatch();
+                    if (tab.dataset.mode === 'builder') startBuilder();
                 });
             });
 
@@ -2311,6 +2546,7 @@
             renderGrammarNav();
             startSpellingBee();
             startWordMatch();
+            startBuilder();
         });
     </script>
 </body>
