feat: Add a set comparison tool with Venn diagram visualization and dark mode.

--- a/tools/devops/set-comparator.html
+++ b/tools/devops/set-comparator.html
@@ -126,8 +126,7 @@
             </label>
             <label class="inline-flex items-center cursor-pointer">
                 <input type="checkbox" id="sortResults"
-                    class="form-checkbox h-5 w-5 text-blue-600 rounded focus:ring-blue-500 border-gray-300 dark:border-gray-600 dark:bg-gray-700"
-                    checked>
+                    class="form-checkbox h-5 w-5 text-blue-600 rounded focus:ring-blue-500 border-gray-300 dark:border-gray-600 dark:bg-gray-700">
                 <span class="ml-2 text-gray-700 dark:text-gray-300">Sort Results</span>
             </label>
         </div>
